Added improvements for cookbook 05_Using_reasoning_for_routine_generation_with_Nugen.ipynb

--- a/guides/05_Using_reasoning_for_routine_generation_with_Nugen/05_Using_reasoning_for_routine_generation_with_Nugen.ipynb
+++ b/guides/05_Using_reasoning_for_routine_generation_with_Nugen/05_Using_reasoning_for_routine_generation_with_Nugen.ipynb
@@ -27,6 +27,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What problem does this solve?\n",
+    "\n",
+    "Customer service policies are written for humans, not machines.\n",
+    "This cookbook shows how to:\n",
+    "- Convert external-facing policy text into structured, executable routines\n",
+    "- Validate those routines for accuracy and compliance\n",
+    "- Run the process at scale using concurrency\n",
+    "\n",
+    "This pattern is useful for:\n",
+    "- AI-powered customer support\n",
+    "- Internal support copilots\n",
+    "- Policy-compliant automation systems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "-I4VMoC2KLoE"
    },
@@ -81,8 +99,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "url_api_server = \"https://api.nugen.in\"\n",
-    "api_key =  <enter your api key> # Replace with your actual Nugen API key\n",
+    "\n",
+    "api_key = os.getenv(\"NUGEN_API_KEY\")\n",
+    "if not API_KEY:\n",
+    "    raise EnvironmentError(\n",
+    "        \"Please set the NUGEN_API_KEY environment variable.\"\n",
+    ") # Replace with your actual Nugen API key\n",
+    "\n",
     "MODEL = \"nugen-flash-instruct\""
    ]
   },
@@ -238,6 +263,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Example Policy Used in This Notebook\n",
+    "\n",
+    "> Customers may request a refund within 30 days of purchase.\n",
+    "> Refunds are only applicable if the product has not been used.\n",
+    "> Digital goods are non-refundable unless defective.\n",
+    "> Refunds must be processed using the original payment method.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This prompt instructs the API on how to convert the policy text into a routine. The instructions are detailed to ensure the generated routine is accurate and executable."
    ]
   },
@@ -291,30 +328,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_routine(policy):\n",
-    "    try:\n",
-    "        messages = [{\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": f\"{CONVERSION_PROMPT}\\n\\nPOLICY:\\n{policy}\"\n",
-    "        }]\n",
+    "import time\n",
     "\n",
-    "        response = client.chat_completions_create(\n",
-    "            model=MODEL,\n",
-    "            messages=messages\n",
-    "        )\n",
+    "def generate_routine(policy, retries=3):\n",
+    "    for attempt in range(retries):\n",
+    "        try:\n",
+    "            messages = [{\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": f\"{CONVERSION_PROMPT}\\n\\nPOLICY:\\n{policy}\"\n",
+    "            }]\n",
     "\n",
-    "        # Print the full response to debug\n",
-    "        print(\"Full API Response:\", response)\n",
+    "            response = client.chat_completions_create(\n",
+    "                model=MODEL,\n",
+    "                messages=messages\n",
+    "            )\n",
     "\n",
-    "        # Modify this according to the actual response structure\n",
-    "        return response['choices'][0].get('text', None)  # Adjust based on actual API response\n",
-    "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")\n",
-    "        return None"
+    "            # Print the full response to debug\n",
+    "            print(\"Full API Response:\", response)\n",
+    "\n",
+    "            # Modify this according to the actual response structure\n",
+    "            return response['choices'][0].get('text', None)  # Adjust based on actual API response\n",
+    "        except Exception as e:\n",
+    "            if attempt == retries - 1:\n",
+    "                raise e\n",
+    "            time.sleep(2 ** attempt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Failure handling with respect to previous cell\n",
+    "\n",
+    "- Transient API failures are retried with exponential backoff\n",
+    "- Hard failures are surfaced clearly for manual review"
    ]
   },
   {
@@ -356,7 +407,10 @@
     "        \n",
     "        # Check if the evaluation includes the keyword \"pass\" indicating validation success\n",
     "        if \"pass\" in evaluation:\n",
-    "            return True  # Routine passed validation\n",
+    "            return {\n",
+    "                \"status\":\"PASS\",\n",
+    "                \"reason\": \"Routine accuratly reflects return policy...\"\n",
+    "            }  # Routine passed validation\n",
     "        else:\n",
     "            # Print the validation result if it fails\n",
     "            print(f\"Routine failed validation: {evaluation}\")\n",
@@ -367,6 +421,19 @@
     "        # This can catch issues such as network errors or invalid inputs\n",
     "        print(f\"An error occurred during validation: {e}\")\n",
     "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Structured Validation Results\n",
+    "\n",
+    "Instead of a binary pass/fail signal, this workflow records:\n",
+    "- Validation status\n",
+    "- Human-readable reasoning\n",
+    "\n",
+    "This makes the output auditable, debuggable, and suitable for compliance review."
    ]
   },
   {
@@ -428,6 +495,19 @@
    },
    "source": [
     "Here, we use ThreadPoolExecutor to process all articles concurrently. This makes the code run faster when dealing with multiple articles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Why concurrency?\n",
+    "\n",
+    "Help centers often contain hundreds of articles.\n",
+    "Using ThreadPoolExecutor allows us to:\n",
+    "- Reduce total processing time\n",
+    "- Scale routine generation efficiently\n",
+    "- Maintain consistent throughput"
    ]
   },
   {
