Added some fixes to using nugen embeddings, and updated the business context and receptionist prompt to improve receptionist answers

--- a/guides/AI_Receptionist_with_Nugen.ipynb
+++ b/guides/AI_Receptionist_with_Nugen.ipynb
@@ -69,12 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HELPER FUNCTIONS\n",
-    "\n",
-    "def call_nugen_completion(prompt: str, model=\"nugen-flash-instruct\", max_tokens=200, temp=0.7):\n",
-    "    \"\"\"\n",
-    "    Sends a text prompt to Nugen completion endpoint.\n",
-    "    \"\"\"\n",
+    "def call_nugen_chat(prompt: str, model=\"nugen-flash-instruct\", max_tokens=200, temp=0.3):\n",
     "    url = f\"{BASE_URL}/completions\"\n",
     "    headers = {\n",
     "        \"Authorization\": f\"Bearer {API_KEY}\",\n",
@@ -90,13 +85,13 @@
     "    response.raise_for_status()\n",
     "    return response.json()\n",
     "\n",
+    "\n",
     "def format_response(resp):\n",
-    "    \"\"\"\n",
-    "    Returns assistant text from Nugen output.\n",
-    "    \"\"\"\n",
-    "    if 'choices' in resp and len(resp['choices']) > 0:\n",
-    "        return resp['choices'][0].get(\"text\", \"\").strip()\n",
-    "    return \"\""
+    "    try:\n",
+    "        return resp[\"choices\"][0][\"text\"].strip()\n",
+    "    except (KeyError, IndexError, TypeError):\n",
+    "        print(\"Full response:\", resp)\n",
+    "        return \"\""
    ]
   },
   {
@@ -109,7 +104,9 @@
     "#DEFINING BUSINESS CONTEXT, basically what agent should understand about its role.\n",
     "\n",
     "BUSINESS_CONTEXT = \"\"\"\n",
-    "You are the AI receptionist for 'Acme General Clinic'.\n",
+    "Business name: Acme General Clinic\n",
+    "\n",
+    "Business about: A health clinic that provides services like vaccination, appointments with doctors for treatments, general healthcare\n",
     "\n",
     "Business hours:\n",
     "- Mon–Fri: 9am–6pm\n",
@@ -131,19 +128,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A prompt for template receptionist\n",
-    "RECEPTIONIST_PROMPT = f\"\"\"\n",
-    "You are a receptionist assistant using the following business context:\n",
+    "RECEPTIONIST_TEMPLATE = \"\"\"\n",
+    "You are the AI receptionist for Acme General Clinic.\n",
     "\n",
-    "{BUSINESS_CONTEXT}\n",
+    "Here is your business information:\n",
     "\n",
-    "User Query: '{{query}}'\n",
+    "{business_context}\n",
     "\n",
-    "Return a JSON with:\n",
-    "    intent: 'faq' or 'appointment'\n",
-    "    reply: assistant response\n",
-    "    structured: extracted info if appointment\n",
-    "\"\"\""
+    "You MUST answer strictly using this information.\n",
+    "If the answer is not available in the business context, reply exactly:\n",
+    "\"I don't know.\"\n",
+    "\n",
+    "User Query: {query}\n",
+    "\n",
+    "Respond ONLY in JSON format. Use this exact schema and fill values:\n",
+    "\n",
+    "{{\n",
+    "  \"intent\": \"faq\" or \"appointment\",\n",
+    "  \"reply\": \"\",\n",
+    "  \"structured\": null\n",
+    "}}\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -154,12 +159,13 @@
    "outputs": [],
    "source": [
     "#FAQ example that a customer would ask\n",
-    "query = \"What time do you open on Saturdays?\"\n",
-    "prompt = RECEPTIONIST_PROMPT.replace(\"{query}\", query)\n",
     "\n",
-    "result = call_nugen_completion(prompt)\n",
-    "print(\"Query:\", query)\n",
-    "print(\"Assistant:\", format_response(result))\n"
+    "\n",
+    "query = \"What days are you guys open in a week?\"\n",
+    "prompt = RECEPTIONIST_TEMPLATE.format(business_context=BUSINESS_CONTEXT, query=query)\n",
+    "\n",
+    "result = call_nugen_chat(prompt)\n",
+    "print(\"Assistant:\", format_response(result))"
    ]
   },
   {
@@ -172,9 +178,9 @@
     "# Appointment Intent Example, customer asking for appointment booking\n",
     "\n",
     "query = \"I want to book a vaccination on October 10 with Dr. Smith\"\n",
-    "prompt = RECEPTIONIST_PROMPT.replace(\"{query}\", query)\n",
+    "prompt = RECEPTIONIST_TEMPLATE.format(business_context=BUSINESS_CONTEXT, query=query)\n",
     "\n",
-    "result = call_nugen_completion(prompt)\n",
+    "result = call_nugen_chat(prompt)\n",
     "print(\"Query:\", query)\n",
     "print(\"Assistant:\", format_response(result))\n"
    ]
@@ -186,30 +192,127 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# you can use embedding to power a semantic FAQ search system, so that FAQs could be answered easily, quickly and efficiently\n",
-    "\n",
     "def get_embedding(text, model=\"nugen-flash-embed\"):\n",
     "    url = f\"{BASE_URL}/embeddings\"\n",
     "    headers = {\n",
     "        \"Authorization\": f\"Bearer {API_KEY}\",\n",
     "        \"Content-Type\": \"application/json\"\n",
     "    }\n",
+    "\n",
     "    payload = {\n",
     "        \"input\": text,\n",
     "        \"model\": model\n",
     "    }\n",
+    "\n",
     "    response = requests.post(url, json=payload, headers=headers)\n",
     "    response.raise_for_status()\n",
-    "    return response.json()\n",
     "\n",
-    "faq_list = [\n",
-    "    \"When are you open?\",\n",
-    "    \"What services do you offer?\",\n",
-    "    \"Can I change my appointment?\"\n",
-    "]\n",
+    "    data = response.json()\n",
+    "    return data[\"data\"][0][\"embedding\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95233a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "faq_data = [\n",
+    "    {\n",
+    "        \"question\": \"When are you open?\",\n",
+    "        \"answer\": \"We are open Monday to Friday, 9am to 6pm.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"What services do you offer?\",\n",
+    "        \"answer\": \"We provide general consultation, vaccinations, and follow-ups.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Can I change my appointment?\",\n",
+    "        \"answer\": \"Yes, you can change your appointment by calling the clinic during business hours.\"\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de97ddc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_faq_index(faq_data):\n",
+    "    questions = [item[\"question\"] for item in faq_data]\n",
+    "    embeddings = [get_embedding(q) for q in questions]\n",
+    "    return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e38f359f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "faq_embeddings = build_faq_index(faq_data)\n",
+    "print(\"FAQ index built!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdd6e580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
     "\n",
-    "faq_embeddings = [get_embedding(q) for q in faq_list]\n",
-    "print(\"Embeddings fetched for FAQs!\")\n"
+    "def cosine_similarity(a, b):\n",
+    "    a = np.array(a)\n",
+    "    b = np.array(b)\n",
+    "    return np.dot(a, b) / (np.linalg.norm(a) * np.linalg.norm(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a6263d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def semantic_faq_search(user_query, faq_data, faq_embeddings, threshold=0.75):\n",
+    "    query_embedding = get_embedding(user_query)\n",
+    "\n",
+    "    similarities = [\n",
+    "        cosine_similarity(query_embedding, faq_embedding)\n",
+    "        for faq_embedding in faq_embeddings\n",
+    "    ]\n",
+    "\n",
+    "    best_index = np.argmax(similarities)\n",
+    "    best_score = similarities[best_index]\n",
+    "\n",
+    "    if best_score >= threshold:\n",
+    "        return faq_data[best_index][\"answer\"]\n",
+    "    else:\n",
+    "        return \"I don't know.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d60255ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_question = \"What time do you open on weekdays?\"\n",
+    "\n",
+    "response = semantic_faq_search(\n",
+    "    user_question,\n",
+    "    faq_data,\n",
+    "    faq_embeddings\n",
+    ")\n",
+    "\n",
+    "print(\"Assistant:\", response)"
    ]
   },
   {
@@ -219,14 +322,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FLOW loop\n",
     "while True:\n",
     "    user_text = input(\"\\nYou: \")\n",
+    "\n",
     "    if user_text.lower() in (\"quit\", \"exit\"):\n",
     "        print(\"Receptionist: Take care!\")\n",
     "        break\n",
-    "    prompt = RECEPTIONIST_PROMPT.replace(\"{query}\", user_text)\n",
-    "    resp = call_nugen_completion(prompt)\n",
+    "\n",
+    "    # Step 1: Try semantic FAQ first\n",
+    "    faq_response = semantic_faq_search(user_text, faq_data,faq_embeddings)\n",
+    "\n",
+    "    if faq_response != \"I don't know.\":\n",
+    "        print(\"Receptionist:\", faq_response)\n",
+    "        continue  # skip LLM call\n",
+    "\n",
+    "    # Step 2: Fallback to LLM if FAQ not matched\n",
+    "    prompt = RECEPTIONIST_TEMPLATE.replace(\"{query}\", user_text)\n",
+    "    resp = call_nugen_chat(prompt)\n",
+    "\n",
     "    print(\"Receptionist:\", format_response(resp))"
    ]
   },
