aded proper comments and sample outputs in the AI receptionist cookbook

--- a/guides/AI_Receptionist_with_Nugen.ipynb
+++ b/guides/AI_Receptionist_with_Nugen.ipynb
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DEFINING BUSINESS CONTEXT, basically what agent should understand about its role.\n",
+    "#DEFINING BUSINESS CONTEXT, basically what agent should understand about its business.\n",
     "\n",
     "BUSINESS_CONTEXT = \"\"\"\n",
     "Business name: Acme General Clinic\n",
@@ -128,6 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#DEFINING BUSINESS CONTEXT, basically what agent should understand about its role in business.\n",
     "RECEPTIONIST_TEMPLATE = \"\"\"\n",
     "You are the AI receptionist for Acme General Clinic.\n",
     "\n",
@@ -169,6 +170,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8fb9ab5e",
+   "metadata": {},
+   "source": [
+    "Assistant: You are the AI receptionist for Acme General Clinic.\n",
+    "\n",
+    "Here is your business information:\n",
+    "\n",
+    "\n",
+    "You are the AI receptionist for 'Acme General Clinic'.\n",
+    "\n",
+    "If user intent cannot be understood, reply \"I don't know.\"\n",
+    "If a query refers to appointment bookings, extract name/date/service.\n",
+    "\n",
+    "\n",
+    "You MUST answer strictly using this information.\n",
+    "If the answer is not available in the business context, reply exactly:\n",
+    "\"I don't know.\"\n",
+    "\n",
+    "User Query: What days are you guys open in a week?\n",
+    "\n",
+    "Assistant: {\n",
+    "  \"intent\": \"faq\",\n",
+    "  \"reply\": \"Yes, we are open from Monday to Friday, including weekends and holidays.\",\n",
+    "  \"structured\": null\n",
+    "}\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0e387538",
@@ -178,11 +208,48 @@
     "# Appointment Intent Example, customer asking for appointment booking\n",
     "\n",
     "query = \"I want to book a vaccination on October 10 with Dr. Smith\"\n",
-    "prompt = RECEPTIONIST_TEMPLATE.format(business_context=BUSINESS_CONTEXT, query=query)\n",
+    "prompt = RECEPTIONIST_PROMPT.replace(\"{query}\", query)\n",
     "\n",
-    "result = call_nugen_chat(prompt)\n",
+    "result = call_nugen_completion(prompt)\n",
     "print(\"Query:\", query)\n",
     "print(\"Assistant:\", format_response(result))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a277e4db",
+   "metadata": {},
+   "source": [
+    "Output:\n",
+    "#### Query: I want to book a vaccination on October 10 with Dr. Smith\n",
+    "#### Assistant: You are the AI receptionist for Acme General Clinic.\n",
+    "\n",
+    "#### Here is your business information:\n",
+    "\n",
+    "#### You are the AI receptionist for 'Acme General Clinic'.\n",
+    "\n",
+    "#### Business hours:\n",
+    "#### - Mon–Fri: 9am–6pm\n",
+    "\n",
+    "#### Services:\n",
+    "#### - General consultation\n",
+    "#### - Vaccinations\n",
+    "#### - Follow-ups\n",
+    "\n",
+    "#### If user intent cannot be understood, reply \"I don't know.\"\n",
+    "#### If a query refers to appointment bookings, extract name/date/service.\n",
+    "\n",
+    "\n",
+    "#### You MUST answer strictly using this information.\n",
+    "#### If the answer is not available in the business context, reply exactly:\n",
+    "#### \"I don't know.\"\n",
+    "\n",
+    "#### User Query: I want to book a vaccination on October 10 with Dr. Smith\n",
+    "\n",
+    "#### Assistant: {\n",
+    "####  \"intent\": \"appointment\",\n",
+    "####  \"reply\": \"Thank you for your inquiry. We are sorry that we do not have a Dr. Smith on hand at this time. Please contact him on his #### phone number or email for further assistance. We will do our best to schedule an appointment for you.\"\n",
+    "#### }"
    ]
   },
   {
@@ -192,6 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## this is to get embeddings, or basically converting words to their numeric vector representation\n",
     "def get_embedding(text, model=\"nugen-flash-embed\"):\n",
     "    url = f\"{BASE_URL}/embeddings\"\n",
     "    headers = {\n",
@@ -218,6 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## FAQ Data for question and answers in FAQ\n",
     "faq_data = [\n",
     "    {\n",
     "        \"question\": \"When are you open?\",\n",
@@ -241,6 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## this to build FAQ index for every question by getting their embeddings using get_embedding function\n",
     "def build_faq_index(faq_data):\n",
     "    questions = [item[\"question\"] for item in faq_data]\n",
     "    embeddings = [get_embedding(q) for q in questions]\n",
@@ -254,8 +324,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## passing faq_data to build faq index to store them in faq_embeddings using build_faq_index\n",
     "faq_embeddings = build_faq_index(faq_data)\n",
     "print(\"FAQ index built!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e17e7d7",
+   "metadata": {},
+   "source": [
+    "Output:\n",
+    "#### FAQ index built!"
    ]
   },
   {
@@ -265,6 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## cosine similarity function to basically get similarity between words of the questions\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "def cosine_similarity(a, b):\n",
@@ -280,6 +362,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## this semantic_faq_search function basically determines similarities between query question and faq_embeddings by determining cosine similarity between them\n",
+    "## if match is found, basically we show the best match else \"I dont know\" is returned.\n",
     "def semantic_faq_search(user_query, faq_data, faq_embeddings, threshold=0.75):\n",
     "    query_embedding = get_embedding(user_query)\n",
     "\n",
@@ -304,6 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# example of asking faq and using embeddings from nugen to determine the answer.\n",
     "user_question = \"What time do you open on weekdays?\"\n",
     "\n",
     "response = semantic_faq_search(\n",
@@ -316,12 +401,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "460cc974",
+   "metadata": {},
+   "source": [
+    "Output:\n",
+    "#### Assistant: We are open Monday to Friday, 9am to 6pm."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "245e741c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# running this loop shows the entire code flow. \n",
+    "# first, after the user asks questions, the code first checks it using the semantic_faq_search \n",
+    "# if match is not found it searches for answers using LLM using call_nugen_chat\n",
+    "# once response is found, it is printed. \n",
+    "\n",
     "while True:\n",
     "    user_text = input(\"\\nYou: \")\n",
     "\n",
@@ -341,6 +440,19 @@
     "    resp = call_nugen_chat(prompt)\n",
     "\n",
     "    print(\"Receptionist:\", format_response(resp))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b2f6fcf",
+   "metadata": {},
+   "source": [
+    "Output:\n",
+    "#### You: what services do you offer?\n",
+    "#### Receptionist: We provide general consultation, vaccinations, and follow-ups.\n",
+    "\n",
+    "#### You: quit\n",
+    "#### Receptionist: Take care!"
    ]
   },
   {
